BAU - Remove ImmutableMap and ImmutableSet
Description:
- Use Java's inbuilt Set.Of(...) and Map.Of(...) which give the same results